# gren-parse

./: .gitignore  LICENSE  README.md  Taskfile.yml  cabal.project  gren.json  package-lock.json  package.json  publish.fish  run-tests.fish  ulme-parse.cabal
.github/workflows/: run-tests.yml
scripts/: build-dev.fish  build.fish  push.fish  run-tests.fish
src/: ArrayParser.gren  Parse.gren  SimpleParser.gren  StringParser.gren  TokenParser.gren
src/Array/: Extra.gren
src/ArrayParser/: Parse.gren
src/StringParser/: Parse.gren
src/Ulme/: Parse.hs
tests/: .gitignore  Main.gren  Tests.hs  app  gren.json  run-tests.fish
tests/src/: Main.gren
tests/src/Tests/: ArrayParser.gren  SimpleParser.gren  StringParser.gren  TokenParser.gren
tests/src/Tests/ArrayParser/: Parse.gren
tests/src/Tests/StringParser/: Parse.gren
