cabal-version           : 2.2

name                    : ulme-parse
version                 : 0.4.0
synopsis                : parser combinator functions for combinatory parsing
homepage                : https://git.sr.ht/~aramis/ulme-parse
copyright               : (c) 2020 Aramís Concepción Durán
license                 : GPL-3.0-only
license-file            : LICENSE
author                  : Aramís Concepción Durán <aramis@systemli.org>
maintainer              : Aramís Concepción Durán <aramis@systemli.org>
build-type              : Simple
extra-source-files      : README.md
description             : A simple parser-combinator package.
                          This work was part of my first attempt at non-trivial parsing.
                          It was motivated by this presentation: https://vimeo.com/171704565

                          Parser-combinators are surprisingly accessible.


common fields
    default-language    : Haskell2010
    hs-source-dirs      : src tests

    ghc-options         : -Werror
                          -Weverything
                          -Wno-all-missed-specialisations
                          -Wno-missing-import-lists
                          -Wno-missing-local-signatures
                          -Wno-missing-safe-haskell-mode
                          -Wno-monomorphism-restriction
                          -Wno-redundant-constraints
                          -Wno-safe
                          -Wno-type-defaults
                          -Wno-unsafe
                      -- dev
                         --Wno-unused-binds
                         --Wno-unused-imports
                         --Wno-unused-packages

    default-extensions  : AllowAmbiguousTypes
                          ApplicativeDo
                          BinaryLiterals
                          BlockArguments
                          ConstraintKinds
                          DeriveAnyClass
                          DeriveGeneric
                          DuplicateRecordFields
                          ExplicitForAll
                          ExtendedDefaultRules
                          FlexibleContexts
                          FlexibleInstances
                          GeneralisedNewtypeDeriving
                          HexFloatLiterals
                          ImportQualifiedPost
                          LambdaCase
                          MultiParamTypeClasses
                          NamedFieldPuns
                          NegativeLiterals
                          NoImplicitPrelude
                          NumDecimals
                          NumericUnderscores
                          OverloadedStrings
                          PackageImports
                          RecordWildCards
                          RecursiveDo
                          ScopedTypeVariables
                          Strict
                          TupleSections

    build-depends       : ulme


library
    import              : fields
    exposed-modules     : Ulme.Parse


executable tests
    import              : fields
    main-is             : Tests.hs
    other-modules       : Ulme.Parse
    type                : exitcode-stdio-1.0

    build-depends       : hspec >= 2.7
                        , hspec-core >= 2.7
                        , QuickCheck >= 2.13
                        , quickcheck-instances >= 0.3


source-repository head
    type                : git
    location            : https://git.sr.ht/~aramis/ulme-parse
