cabal-version           : 2.2

name                    : ulme-parse
version                 : 0.7.0
synopsis                : parser combinator functions for combinatory parsing
homepage                : https://git.sr.ht/~aramis/ulme-parse
copyright               : (c) 2020 Aramís Concepción Durán
license                 : GPL-3.0-only
license-file            : LICENSE
author                  : Aramís Concepción Durán <aramis@systemli.org>
maintainer              : Aramís Concepción Durán <aramis@systemli.org>
build-type              : Simple
extra-source-files      : README.md
description             : A simple parser-combinator package.
                          This work was part of my first attempt at non-trivial parsing.
                          It was motivated by this presentation: https://vimeo.com/171704565

                          Parser-combinators are surprisingly accessible.


flag dev
    default             : False
    manual              : True


common fields
    default-language    : Haskell2010
    hs-source-dirs      : src tests

    ghc-options         : -Werror
                          -Weverything
                          -Wno-all-missed-specialisations
                          -Wno-missing-deriving-strategies
                          -Wno-missing-import-lists
                          -Wno-missing-kind-signatures
                          -Wno-missing-local-signatures
                          -Wno-missing-safe-haskell-mode
                          -Wno-monomorphism-restriction
                          -Wno-redundant-constraints
                          -Wno-safe
                          -Wno-type-defaults
                          -Wno-unsafe
    if flag(dev)
        ghc-options     : -Wno-missing-export-lists
                          -Wno-missing-exported-signatures
                          -Wno-missing-signatures
                          -Wno-unused-binds
                          -Wno-unused-imports
                          -Wno-unused-matches
                          -Wno-unused-packages

    default-extensions  : AllowAmbiguousTypes
                          ApplicativeDo
                          BinaryLiterals
                          BlockArguments
                          ConstraintKinds
                          DeriveAnyClass
                          DeriveGeneric
                          DuplicateRecordFields
                          ExplicitForAll
                          ExtendedDefaultRules
                          FlexibleContexts
                          FlexibleInstances
                          GeneralisedNewtypeDeriving
                          HexFloatLiterals
                          ImportQualifiedPost
                          LambdaCase
                          MultiParamTypeClasses
                          NamedFieldPuns
                          NegativeLiterals
                          NoImplicitPrelude
                          NumDecimals
                          NumericUnderscores
                          OverloadedStrings
                          OverloadedRecordDot
                          PackageImports
                          RecordWildCards
                          RecursiveDo
                          ScopedTypeVariables
                          Strict
                          TupleSections

    build-depends       : base >= 4.16.4
                        , ulme


library
    import              : fields
    exposed-modules     : Ulme.Parse


executable tests
    import              : fields
    main-is             : Tests.hs
    other-modules       : Ulme.Parse

    build-depends       : base >= 4.16.4
                        , hspec >= 2.10.8
                        , hspec-core >= 2.10.8
                        , QuickCheck >= 2.14.2
                        , quickcheck-instances >= 0.3.28


source-repository head
    type                : git
    location            : https://git.sr.ht/~aramis/ulme-parse
